Лепшы debug